# CouncilAI-Executive-Advisory-System

./: .env.example  .gitignore  Dockerfile  README.md  generate_mock_data.py  pyproject.toml  requirements.txt  verify_agents.py
agents/: __init__.py  coordinator.py  finance_agent.py  marketing_agent.py  model_wrapper.py  risk_agent.py
data/: quarterly_kpis.csv  uploaded_kpis_17f55dda.csv
mcp_tools/: __init__.py  calculator_tool.py  filesystem_tool.py  pdf_tool.py  sqlite_tool.py
security/: audit_log.py  input_guard.py  permissions.py
ui/: app.py
